Update to JDK 21 (#296)
Along with other minor updates.